--- a/docs/content/p6.md
+++ b/docs/content/p6.md
@@ -517,6 +517,297 @@ loadUsers5();
 </script>
 ```
 
+## Tutorial: Manipulación de Tablas HTML con JavaScript
+
+Este tutorial cubre todas las formas de manipular una tabla HTML ya creada utilizando JavaScript. Se asume que tienes una tabla básica en tu HTML y deseas modificarla dinámicamente. El tutorial está estructurado para ser claro y práctico, con ejemplos de código que puedes probar directamente.
+
+## 1. Introducción
+
+Las tablas HTML (`<table>`) son elementos comunes para mostrar datos estructurados. JavaScript permite manipular estas tablas dinámicamente, lo que incluye agregar, eliminar o modificar filas, celdas, contenido, estilos y atributos. Este tutorial utiliza el DOM (Document Object Model) para realizar estas operaciones.
+
+## 2. Estructura HTML Base
+
+Para los ejemplos, usaremos la siguiente tabla HTML:
+
+```html
+<table id="miTabla" border="1">
+  <thead>
+    <tr>
+      <th>Nombre</th>
+      <th>Edad</th>
+      <th>Ciudad</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>Juan</td>
+      <td>25</td>
+      <td>Madrid</td>
+    </tr>
+    <tr>
+      <td>María</td>
+      <td>30</td>
+      <td>Barcelona</td>
+    </tr>
+  </tbody>
+</table>
+```
+
+El atributo `id="miTabla"` facilita la selección de la tabla con JavaScript. Asegúrate de incluir esta tabla en tu archivo HTML antes de ejecutar los scripts.
+
+## 3. Seleccionar una Tabla
+
+Para manipular una tabla, primero debes seleccionarla. Aquí hay varias formas de hacerlo:
+
+```javascript
+// Seleccionar por ID
+const tabla = document.getElementById('miTabla');
+
+// Seleccionar por clase (si tiene class="tabla")
+const tablaPorClase = document.querySelector('.tabla');
+
+// Seleccionar todas las tablas
+const todasLasTablas = document.getElementsByTagName('table');
+
+// Seleccionar la primera tabla
+const primeraTabla = document.querySelector('table');
+```
+
+**Nota:** Usaremos `document.getElementById('miTabla')` en los ejemplos por simplicidad.
+
+## 4. Manipular Filas
+
+Las filas de una tabla se representan con el elemento `<tr>`. Puedes agregar, eliminar o modificar filas en el `<tbody>` o `<thead>`.
+
+### 4.1 Agregar una Fila
+
+Para agregar una fila al `<tbody>`:
+
+```javascript
+const tabla = document.getElementById('miTabla');
+const tbody = tabla.getElementsByTagName('tbody')[0];
+const nuevaFila = tbody.insertRow(); // Inserta al final
+
+// Agregar celdas a la fila
+const celda1 = nuevaFila.insertCell();
+const celda2 = nuevaFila.insertCell();
+const celda3 = nuevaFila.insertCell();
+
+celda1.textContent = 'Pedro';
+celda2.textContent = '28';
+celda3.textContent = 'Sevilla';
+```
+
+También puedes especificar el índice donde insertar la fila:
+
+```javascript
+const nuevaFila = tbody.insertRow(0); // Inserta en la primera posición
+```
+
+### 4.2 Eliminar una Fila
+
+Para eliminar una fila específica:
+
+```javascript
+const tabla = document.getElementById('miTabla');
+const tbody = tabla.getElementsByTagName('tbody')[0];
+tbody.deleteRow(0); // Elimina la primera fila
+```
+
+Para eliminar todas las filas:
+
+```javascript
+while (tbody.rows.length > 0) {
+  tbody.deleteRow(0);
+}
+```
+
+### 4.3 Modificar una Fila
+
+Para modificar el contenido de una fila existente:
+
+```javascript
+const tabla = document.getElementById('miTabla');
+const fila = tabla.rows[1]; // Segunda fila (índice 1)
+fila.cells[0].textContent = 'Ana'; // Cambia la primera celda
+fila.cells[1].textContent = '35';
+fila.cells[2].textContent = 'Valencia';
+```
+
+## 5. Manipular Celdas
+
+Las celdas se representan con `<td>` (o `<th>` en encabezados). Puedes manipularlas individualmente.
+
+### 5.1 Agregar una Celda
+
+Para agregar una celda a una fila existente:
+
+```javascript
+const tabla = document.getElementById('miTabla');
+const fila = tabla.rows[1];
+const nuevaCelda = fila.insertCell(); // Inserta al final
+nuevaCelda.textContent = 'Nueva Celda';
+```
+
+### 5.2 Eliminar una Celda
+
+Para eliminar una celda específica:
+
+```javascript
+const tabla = document.getElementById('miTabla');
+const fila = tabla.rows[1];
+fila.deleteCell(0); // Elimina la primera celda
+```
+
+### 5.3 Modificar una Celda
+
+Para cambiar el contenido de una celda:
+
+```javascript
+const tabla = document.getElementById('miTabla');
+const celda = tabla.rows[1].cells[0];
+celda.textContent = 'Modificado';
+```
+
+## 6. Manipular Contenido de la Tabla
+
+Además de filas y celdas, puedes modificar el contenido, atributos y estilos de la tabla.
+
+### 6.1 Cambiar Texto o HTML
+
+Para cambiar el texto:
+
+```javascript
+const celda = document.getElementById('miTabla').rows[1].cells[0];
+celda.textContent = 'Nuevo Texto';
+```
+
+Para insertar HTML:
+
+```javascript
+celda.innerHTML = '<strong>Texto en negrita</strong>';
+```
+
+### 6.2 Agregar Atributos
+
+Para agregar o modificar atributos:
+
+```javascript
+const tabla = document.getElementById('miTabla');
+tabla.setAttribute('class', 'tabla-estilizada');
+tabla.rows[1].cells[0].setAttribute('data-id', '123');
+```
+
+### 6.3 Modificar Estilos
+
+Para cambiar estilos con CSS:
+
+```javascript
+const tabla = document.getElementById('miTabla');
+tabla.style.border = '2px solid blue';
+tabla.rows[1].cells[0].style.backgroundColor = 'yellow';
+```
+
+O usando clases CSS:
+
+```javascript
+tabla.classList.add('borde-azul');
+```
+
+## 7. Iterar Sobre Filas y Celdas
+
+Puedes recorrer todas las filas y celdas para realizar operaciones masivas:
+
+```javascript
+const tabla = document.getElementById('miTabla');
+for (let fila of tabla.rows) {
+  for (let celda of fila.cells) {
+    celda.style.backgroundColor = 'lightgray';
+  }
+}
+```
+
+## 8. Manipular Encabezados (thead) y Cuerpo (tbody)
+
+Para trabajar específicamente con `<thead>` o `<tbody>`:
+
+```javascript
+const tabla = document.getElementById('miTabla');
+const thead = tabla.getElementsByTagName('thead')[0];
+const tbody = tabla.getElementsByTagName('tbody')[0];
+
+// Agregar una fila al thead
+const nuevaFilaThead = thead.insertRow();
+const celdaThead = nuevaFilaThead.insertCell();
+celdaThead.textContent = 'Nuevo Encabezado';
+```
+
+## 9. Ejemplo Completo
+
+Aquí tienes un ejemplo completo que combina varias operaciones:
+
+```html
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8">
+  <title>Manipulación de Tablas</title>
+  <style>
+    table { border-collapse: collapse; }
+    th, td { border: 1px solid black; padding: 8px; }
+    .resaltado { background-color: yellow; }
+  </style>
+</head>
+<body>
+  <table id="miTabla">
+    <thead>
+      <tr>
+        <th>Nombre</th>
+        <th>Edad</th>
+        <th>Ciudad</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>Juan</td>
+        <td>25</td>
+        <td>Madrid</td>
+      </tr>
+      <tr>
+        <td>María</td>
+        <td>30</td>
+        <td>Barcelona</td>
+      </tr>
+    </tbody>
+  </table>
+
+  <script>
+    const tabla = document.getElementById('miTabla');
+    const tbody = tabla.getElementsByTagName('tbody')[0];
+
+    // Agregar una fila
+    const nuevaFila = tbody.insertRow();
+    nuevaFila.insertCell().textContent = 'Pedro';
+    nuevaFila.insertCell().textContent = '28';
+    nuevaFila.insertCell().textContent = 'Sevilla';
+
+    // Modificar una celda
+    tabla.rows[1].cells[0].textContent = 'Ana';
+
+    // Resaltar filas pares
+    for (let i = 0; i < tbody.rows.length; i++) {
+      if (i % 2 === 0) {
+        tbody.rows[i].classList.add('resaltado');
+      }
+    }
+
+    // Eliminar la segunda fila
+    tbody.deleteRow(1);
+  </script>
+</body>
+</html>
+```
+
 ---
 ## Actividad: Consumo de la API de Películas con Mockoon Playground (POST y PUT habilitados)
 
